Coding get audio online...

--- a/app/views/admin/words/index.html.erb
+++ b/app/views/admin/words/index.html.erb
@@ -1,8 +1,45 @@
+<script type="text/javascript">
+  $(document).ready(function(){
+    $("#get_audio").click(function(){
+      $.ajax({
+        url: "/admin/words",
+        type: "POST",
+        data: {authenticity_token: $("input[name=authenticity_token]").val(), check_action: "get_audio"},
+        success:function(data) {
+          alert(data.message);
+          var result = handle(data);
+        }
+      });
+    })
+  });
+    function get_audio(word){
+      word = word.replace(/ /gi, "-");
+      var yqlQuery = "https://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20html%20where%20url%3D'http%3A%2F%2Fdictionary.cambridge.org%2Fdictionary%2Fbritish%2F"+ word +"'%20and%20xpath%3D'%2F%2Fspan%5B%40data-src-mp3%5D'&format=json&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys";
+      //select * from html where url='http://dictionary.cambridge.org/dictionary/british/dog' and xpath='//span[@data-src-mp3]'
+      console.log(yqlQuery);
+      var result;
+      $.get(yqlQuery, function(data){
+        result = $(data).query.results.span[0].data-src-mp3 + "," +
+                 $(data).query.results.span[0].data-src-mp3;
+                 alert(result);
+      })
+    };
+    function handle(data){
+      var words = data.split(",");
+      var result, index;
+      for (index = 0; index < words.length; ++index){
+        if (words[index] != ""){
+          result[index] = get_audio(words[index])
+        }
+      }
+      return result;
+    };
+</script>
 <div>
   <h3><%= t ".title" %></h3>
     <%= form_tag admin_words_path, multipart: true do %>
       <%= file_field_tag :file %>
-      <%= submit_tag t ".btn_submit" %>
+      <%= submit_tag t(".btn_submit"), id: "import" %>
     <% end %>
   <h4><%= t ".file_structure" %></h4>
   <p><%= t ".guide1" %></p>
@@ -11,4 +48,8 @@
 </div>
 <div>
   <%= button_to t(".btn_export"), admin_words_path(format: "csv", check_action: "export") %>
+</div>
+<div>
+  <input type="button", id="get_audio"/>
+  <%#= button_to t(".btn_get_audio"), "#", id: "get_audio" %>
 </div>
